Maybe fixed the mobile overflow issue

--- a/public/app.css
+++ b/public/app.css
@@ -64,6 +64,7 @@ li {
     height: 100%;
     background-color:#1e255b;
     transition-duration: 0.3s;
+    overflow: hidden;
 }
 #Home sidebar {
     position: absolute;
